# creator

./: .gitignore  Cargo.toml  LICENSE  README.md  config-clean-architecture.json  config-module-based.json  config.json
.github/workflows/: quality.yml  release.yml
docs/: README.md  cli-usage-guide.md  configuration-examples.md  phase-1-implementation.md  phase-2-implementation.md  project-summary.md  quick-start.md  technical-analysis.md  user-guide.md
src/: app.rs  cli.rs  cli_engine.rs  config.rs  creator.rs  feature.rs  file_utils.rs  generator.rs  lib.rs  main.rs  opts.rs
templates/: components.hbs  default.hbs  hooks.hbs
