[package]
name = "creator"
version = "0.1.0"
edition = "2021"
about = "CLI tool for creating React Native structure folders"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
inquire = "0.7.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
clap = { version = "4.5.2", features = ["derive"] }
handlebars = "5.1.0"


[lib]
name = "creator"
path = "src/lib.rs"
